--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,7 +1,9 @@
 .container {
   padding: 0 16px;
-  width: 1440px;
+  min-width: 320px;
+  width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
