--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,8 @@ a:hover {
 
 body {
   margin: 0;
-  place-items: center;
+  display: flex;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
 }
